--- a/bmcp_2.0.html
+++ b/bmcp_2.0.html
@@ -1,3 +1,6 @@
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <div id="board"></div>
 <style>
   .highlight { box-shadow: inset 0px 0px 3px 3px #ff3300; }
